--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <!-- Image -->
-    <img id="mainImage" src="https://i.pinimg.com/736x/0c/f6/6c/0cf66c781c57b388322dc8c3aa7e1174.jpg" alt="Initial Image">
+    <img id="mainImage" src="/images/base.jpeg" alt="Initial Image">
 
     <!-- Button -->
     <button onclick="powerUp()">POWER UP</button>
@@ -58,16 +58,16 @@
         // Array of image URLs and messages
         const images = [
             {
-                url: "https://i.pinimg.com/564x/b8/f6/d4/b8f6d4ce77b57a92c2036af2f10b0501.jpg",
-                message: "You are a protector now"
+                url: "/images/base.jpeg",
+                message: "You are a still the same" + "no power ups this time."
             },
             {
-                url: "https://i.pinimg.com/564x/b1/0e/bf/b10ebfe3fd64725e1f5515011da5785d.jpg",
-                message: "You are a defender now"
+                url: "/images/archer.jpeg",
+                message: "You are a archer now" + "+2 to DEX -2 to STR"
             },
             {
-                url: "https://i.pinimg.com/736x/d1/c7/5c/d1c75c2102ab7f4cf2108810e877f6eb.jpg",
-                message: "You are a wizard now"
+                url: "/images/wizard.jpeg",
+                message: "You are a wizard now" + "+4 to INT -2 to DEX -2 to STR"
             },
             {
                 url: "https://i.pinimg.com/564x/36/9a/d1/369ad1b2af3fed1801d94b8b04d52cd1.jpg",
