--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <!-- Image -->
-    <img id="mainImage" src="/images/base.jpeg" alt="Initial Image">
+    <img id="mainImage" src="images/base.jpeg" alt="Initial Image">
 
     <!-- Button -->
     <button onclick="powerUp()">POWER UP</button>
@@ -58,20 +58,20 @@
         // Array of image URLs and messages
         const images = [
             {
-                url: "/images/base.jpeg",
-                message: "You are a still the same" + "no power ups this time."
+                url: "images/base.jpeg",
+                message: "You are a still the same degen as before" + " No power ups this time."
             },
             {
-                url: "/images/archer.jpeg",
-                message: "You are a archer now" + "+2 to DEX -2 to STR"
+                url: "images/archer.jpeg",
+                message: "You are an archer now" + " +4 to DEX -4 to STR"
             },
             {
-                url: "/images/wizard.jpeg",
-                message: "You are a wizard now" + "+4 to INT -2 to DEX -2 to STR"
+                url: "images/wizard.jpeg",
+                message: "You are a wizard now" + " +4 to INT -2 to DEX -2 to STR"
             },
             {
                 url: "https://i.pinimg.com/564x/36/9a/d1/369ad1b2af3fed1801d94b8b04d52cd1.jpg",
-                message: "You are an animal now"
+                message: "You are a warrior now" + " +4 to STR -4 to INT"
             }
         ];
 
