--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Power Up Website</title>
     <style>
         /* Basic styles for the image, button, and message */
@@ -29,15 +30,16 @@
         button {
             padding: 10px 20px;
             font-size: 16px;
+            font-weight: 700;
             cursor: pointer;
-            background-color: #007bff;
-            color: #fff;
+            background-color: #e6ebf0;
+            color: #f87676;
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #ffffff;
         }
         #message {
             font-size: 20px;
@@ -51,9 +53,34 @@
     margin-top: 20px;
     font-weight: bold;
 }
+#social-buttons {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 20px;
+}
+
+.icon {
+    font-size: 2rem; /* Increase the size */
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.icon:hover {
+    color: #1da1f2; /* Twitter blue for hover */
+}
+
+
     </style>
 </head>
 <body>
+    <div id="social-buttons">
+        <a href="https://x.com/DegenPowerUp" target="_blank" class="icon"><i class="fab fa-twitter"></i></a>
+        <a href="https://t.me/DegenPowerUp" target="_blank" class="icon"><i class="fab fa-telegram"></i></a>
+    </div>
+    
     <!-- Image -->
     <img id="mainImage" src="images/base.jpeg" alt="Initial Image">
 
