--- a/index.html
+++ b/index.html
@@ -104,15 +104,14 @@
             },
             {
                 url: "images/archer.jpeg",
-                message: "You are an archer now" + " +4 to DEX -4 to STR"
+                message: "You are an archer now"
             },
             {
                 url: "images/wizard.jpeg",
-                message: "You are a wizard now" + " +4 to INT -2 to STR"
-            },
+                message: "You are a wizard now"
             {
                 url: "images/ninja.jpeg",
-                message: "You are a ninja now" + " +2 to DEX +2 to INT"
+                message: "You are a ninja now"
             }
         ];
 
