--- a/index.html
+++ b/index.html
@@ -109,9 +109,14 @@
             {
                 url: "images/wizard.jpeg",
                 message: "You are a wizard now"
+            },
             {
                 url: "images/ninja.jpeg",
                 message: "You are a ninja now"
+            },
+            {
+                url: "images/warrior.jpeg",
+                message: "You are a warrior now"
             }
         ];
 
